--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,8 @@
-{{define "title"}}Overview{{end}}
+{{define "title"}}Start{{end}}
 {{define "content"}}
 <div>
     <div class="text-center">
         <h4>Start</h4>
         <hr/>
 </div>
-<hr/>
 {{end}}
