--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 {{define "content"}}
 <div>
     <div class="text-center">
-        <h4>Start</h4>
+        <h4>{{T "Start"}}</h4>
         <hr/>
 </div>
 {{end}}
