--- a/web/nodes.html
+++ b/web/nodes.html
@@ -8,6 +8,9 @@
             Nodes
             </div>
             <div class="card-body">
+                <a class="btn btn-success" href="{{BaseURL}}/nodes/new">
+                    Create node
+                </a>
             </div>
         </div>
     </div>
