rename node -> node_type / instance -> server

--- a/web/node_types.html
+++ b/web/node_types.html
@@ -1,15 +1,15 @@
-{{define "title"}}Nodes{{end}}
+{{define "title"}}Node-Types{{end}}
 {{define "content"}}
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">
-            Nodes
+            Node-Types
             </div>
             <div class="card-body">
                 <a class="btn btn-success" href="{{BaseURL}}/nodes/new">
-                    Create node
+                    Create node-type
                 </a>
             </div>
         </div>
