--- a/web/node_type_edit.html
+++ b/web/node_type_edit.html
@@ -1,16 +1,13 @@
-{{define "title"}}Node-Types{{end}}
+{{define "title"}}Edit Node-Type{{end}}
 {{define "content"}}
 <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <div class="card">
             <div class="card-header">
-            Node-Types
+            Edit Node-Type
             </div>
             <div class="card-body">
-                <a class="btn btn-success" href="{{BaseURL}}/node_types/new">
-                    Create node-type
-                </a>
             </div>
         </div>
     </div>
