--- a/web/node_type_edit.html
+++ b/web/node_type_edit.html
@@ -1,16 +1,102 @@
 {{define "title"}}Edit Node-Type{{end}}
 {{define "content"}}
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
         <div class="card">
             <div class="card-header">
             Edit Node-Type
             </div>
             <div class="card-body">
+                <form method="POST" action="{{BaseURL}}/node_types/{{.NodeType.ID}}">
+                    <table class="table">
+                        <tr>
+                            <td>ID</td>
+                            <td>
+                                <input type="text" readonly="true" class="form-control" name="id" value="{{.NodeType.ID}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Deprecated</td>
+                            <td>
+                                <input type="checkbox" class="form-check-input" name="deprecated" {{if .NodeType.Deprecated}}checked{{end}}/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Order ID</td>
+                            <td>
+                                <input type="number" class="form-control" name="order_id" value="{{.NodeType.OrderID}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Provider</td>
+                            <td>
+                                <select name="provider" value="{{.NodeType.Provider}}" class="form-control">
+                                    <option value="HETZNER">Hetzner</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Server Type</td>
+                            <td>
+                                <input type="text" class="form-control" name="server_type" value="{{.NodeType.ServerType}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Name</td>
+                            <td>
+                                <input type="text" class="form-control" name="name" value="{{.NodeType.Name}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Description</td>
+                            <td>
+                                <textarea rows="8" class="form-control" name="description">{{.NodeType.Description}}</textarea>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Cost per hour</td>
+                            <td>
+                                <input type="number" min="0" class="form-control" name="cost_per_hour" value="{{.NodeType.CostPerHour}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Max recommended instances</td>
+                            <td>
+                                <input type="number" min="0" class="form-control" name="max_recommended_instances" value="{{.NodeType.MaxRecommendedInstances}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Max instances</td>
+                            <td>
+                                <input type="number" min="0" class="form-control" name="max_instances" value="{{.NodeType.MaxInstances}}"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="d-grid gap-2">
+                                    {{ CSRFField }}
+                                    <button class="btn btn-success" type="submit" name="action" value="save">
+                                        <i class="fa fa-floppy-disk"></i>
+                                        Save
+                                    </button>
+                                </div>    
+                            </td>
+                            <td>
+                                <div class="d-grid gap-2">
+                                    {{ CSRFField }}
+                                    <button class="btn btn-danger" type="submit" name="action" value="remove">
+                                        <i class="fa fa-floppy-disk"></i>
+                                        Delete
+                                    </button>
+                                </div>    
+                            </td>
+                        </tr>
+                    </table>
+                </form>
             </div>
         </div>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3"></div>
 </div>
 {{end}}
