--- a/web/user_node_view.html
+++ b/web/user_node_view.html
@@ -1,4 +1,4 @@
-{{define "title"}}Edit Node{{end}}
+{{define "title"}}Node details{{end}}
 {{define "content"}}
 <div class="row">
     <div class="col-md-3"></div>
