--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -1,6 +1,33 @@
 {{define "title"}}Node details{{end}}
 {{define "content"}}
-<table class="table">
-    
-</table>
+<form method="POST" action="{{BaseURL}}/nodes/{{.UserNode.ID}}">
+    <table class="table">
+        <tr>
+            <td>ID</td>
+            <td>
+                <input type="text" readonly="true" class="form-control" name="id" value="{{.UserNode.ID}}"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div class="d-grid gap-2">
+                    {{ CSRFField }}
+                    <button class="btn btn-success" type="submit" name="action" value="save">
+                        <i class="fa fa-floppy-disk"></i>
+                        Save
+                    </button>
+                </div>    
+            </td>
+            <td>
+                <div class="d-grid gap-2">
+                    {{ CSRFField }}
+                    <button class="btn btn-danger" type="submit" name="action" value="remove">
+                        <i class="fa fa-floppy-disk"></i>
+                        Delete
+                    </button>
+                </div>    
+            </td>
+        </tr>
+    </table>
+</form>
 {{end}}
