--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -1,38 +1,41 @@
 {{define "title"}}Node details{{end}}
 {{define "content"}}
-<form method="POST">
-    <table class="table">
-        <tr>
-            <td>ID</td>
-            <td>
-                <input type="text" readonly="true" class="form-control" disabled="true" name="id" value="{{.UserNode.ID}}"/>
-            </td>
-        </tr>
-        <tr>
-            <td>Name</td>
-            <td>
-                <input type="text" class="form-control" name="name" value="{{.UserNode.Name}}"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="d-grid gap-2">
-                    {{ CSRFField }}
-                    <button class="btn btn-success" type="submit" name="action" value="save">
-                        <i class="fa fa-floppy-disk"></i>
-                        Save
-                    </button>
-                </div>
-            </td>
-            <td>
-                <div class="d-grid gap-2">
-                    <a class="btn btn-danger" href="{{BaseURL}}/nodes/{{.UserNode.ID}}/delete">
-                        <i class="fa fa-floppy-disk"></i>
-                        Delete
-                    </a>
-                </div>
-            </td>
-        </tr>
-    </table>
-</form>
+<table class="table">
+    <tr>
+        <td>ID</td>
+        <td>
+            <input type="text" readonly="true" class="form-control" disabled="true" name="id" value="{{.UserNode.ID}}"/>
+        </td>
+    </tr>
+    <tr>
+        <td>Name</td>
+        <td>
+            <input type="text" class="form-control" name="name" value="{{.UserNode.Name}}"/>
+        </td>
+    </tr>
+    <tr>
+        <td>State</td>
+        <td>
+            {{block "node_state" .UserNode}}{{end}}
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="d-grid gap-2">
+                <a class="btn btn-success" href="{{BaseURL}}/nodes">
+                    <i class="fa fa-floppy-disk"></i>
+                    Back
+                </a>
+            </div>
+        </td>
+        <td>
+            <div class="d-grid gap-2">
+                <a class="btn btn-danger" href="{{BaseURL}}/nodes/{{.UserNode.ID}}/delete">
+                    <i class="fa fa-floppy-disk"></i>
+                    Delete
+                </a>
+            </div>
+        </td>
+    </tr>
+</table>
 {{end}}
