--- a/web/node_types.html
+++ b/web/node_types.html
@@ -3,6 +3,7 @@
 <table class="table">
     <thead>
         <th>ID</th>
+        <th>OrderID</th>
         <th>Name</th>
         <th>Provider</th>
         <th>Server-Type</th>
@@ -23,6 +24,7 @@
                     <span class="badge text-bg-warning">Deprecated</span>
                 {{end}}
             </td>
+            <td>{{$nt.OrderID}}</td>
             <td>{{$nt.Name}}</td>
             <td>{{$nt.Provider}}</td>
             <td>{{$nt.ServerType}}</td>
