--- a/web/usernode/list.html
+++ b/web/usernode/list.html
@@ -28,7 +28,7 @@
         {{end}}
     </tbody>
 </table>
-<a class="btn btn-success" href="{{BaseURL}}/nodes/new">
+<a class="btn btn-success" href="{{BaseURL}}/nodes/select-new">
     <i class="fa fa-plus"></i>
     Create node
 </a>
