--- a/web/usernode/pay_callback.html
+++ b/web/usernode/pay_callback.html
@@ -1,5 +1,6 @@
 {{define "title"}}Payment Callback{{end}}
 {{define "content"}}
+Tx: {{.Transaction.ID}} Node: {{.Node.ID}}
 <a href="{{BaseURL}}/nodes" class="btn btn-primary">
     Go to node
 </a>
