--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -20,6 +20,14 @@
         </td>
     </tr>
     <tr>
+        <td>Created</td>
+        <td>{{formattime .UserNode.Created}}</td>
+    </tr>
+    <tr>
+        <td>Expires</td>
+        <td>{{formattime .UserNode.Expires}}</td>
+    </tr>
+    <tr>
         <td>
             <div class="d-grid gap-2">
                 <a class="btn btn-success" href="{{BaseURL}}/nodes">
