--- a/web/usernode/order_new.html
+++ b/web/usernode/order_new.html
@@ -1,4 +1,4 @@
-{{define "title"}}Payment{{end}}
+{{define "title"}}Order overview{{end}}
 {{define "content"}}
 <form method="post">
     TODO: summary of items
