--- a/web/usernode/detail.html
+++ b/web/usernode/detail.html
@@ -116,4 +116,8 @@
         </td>
     </tbody>
 </table>
+<a class="btn btn-success" href="{{BaseURL}}/mtserver/create?node_id={{.UserNode.ID}}">
+    <i class="fa fa-plus"></i>
+    Create server
+</a>
 {{end}}
