--- a/web/mtserver/create.html
+++ b/web/mtserver/create.html
@@ -1,14 +1,14 @@
-{{define "title"}}Create Node{{end}}
+{{define "title"}}Create Minetest server{{end}}
 {{define "content"}}
-<form method="POST" action="{{BaseURL}}/nodes/new">
+<form method="POST">
     <table class="table">
         <tr>
-            <td>Node-Type</td>
+            <td>Node</td>
             <td>
                 <select name="nodetype" class="form-control">
-                    {{range $nt := .NodeTypes}}
-                    <option value="{{$nt.ID}}">
-                        {{$nt.Name}}
+                    {{range $n := .Nodes}}
+                    <option value="{{$n.ID}}" {{if $n.Selected}}selected{{end}}>
+                        {{$n.Name}}
                     </option>
                     {{end}}
                 </select>
