--- a/web/usernode/order_new.html
+++ b/web/usernode/order_new.html
@@ -35,6 +35,7 @@
     </table>
     {{CSRFField}}
     <button type="submit" class="btn btn-primary">
+        <i class="fa fa-cart-shopping"></i>
         Proceed to payment ({{.TotalCost}} &euro;)
     </button>
 </form>
